Adding some more of the crap at the beginning, plus editing

--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -225,7 +225,7 @@ of $100\,$mrad, in order to provide measurements of the $z$ coordinate in the ba
 The pixel tracker will be upgraded during the extended year-end technical stop in late 2016-early 2017. This upgrade is needed to
 maintain the performance of the tracker as the pileup increases over the next few years \cite{cms-pixel-upgrade}. %or just replaced?
 
-\subsection{\acl{ECAL}}
+\subsection{Electromagnetic calorimeter}
 \label{sec:CMSLHC_CMS_ecal}
 The \ac{ECAL} \cite{cms-jinst} is a hermetic homogeneous calorimeter
 made of nearly $76\,000$ lead tungstate (PbWO$_4$) crystals. It has very
@@ -266,7 +266,7 @@ is contained inside them.
 Figure \ref{fig:CMS_ECAL} shows a schematic of the \ac{ECAL}, indicating
 the sub-systems it is made up of. The \ac{EB} 
 covers the pseudorapidity range up to $|\eta|<1.479$, with
-crystals of $0.0174 \times 0.0174$ in $\eta$-$\phi$. The \ac{EE}
+crystals of $0.0174 \times 0.0174$ in $\eta$-$\phi$. The \acp{EE}
 provide coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$.
 Each endcap is divided into two halves. The preshower detectors, 
 which are sampling calorimeters placed in front of the endcaps, cover a range of $1.653<|\eta|<2.6$.
@@ -310,7 +310,7 @@ test-beam, without a magnetic field or material in front of the \ac{ECAL}, as
 $S = 0.028\,\GeV^{\frac{1}{2}}$, $N = 0.12\,\GeV$ and $C= 0.003$.
 %S = 2.83 %pm 0.03%, C = 0.26% pm 0.04%
 
-\subsection{\acl{HCAL}}
+\subsection{Hadron calorimeter}
 \label{sec:CMSLHC_CMS_hcal}
 The \ac{ECAL} is surrounded by the \ac{HCAL} \cite{cms-jinst}, which is needed for the
 measurement of the energies of strongly interacting particles. As
@@ -392,14 +392,14 @@ muons appear in the final states of many of the \ac{BSM} signatures the experime
 The \ac{CMS} muon system \cite{cms-jinst} is composed of three sub-systems which
 are all necessary to ensure the identification requirements can be met. The muon system is located
 outside of the magnet coil, interspersed in the iron return yoke of the solenoid.
-In the barrel of the detector the \ac{DTs} provide coverage for $|\eta|<1.2$, with
-the \ac{CSCs} covering the $0.9<|\eta|<2.4$ region. The \ac{RPCs}, covering the same
-regions as both the \ac{DTs} and \ac{CSCs}, are used as a dedicated triggering system.
+In the barrel of the detector the \acp{DT} provide coverage for $|\eta|<1.2$, with
+the \acp{CSC} covering the $0.9<|\eta|<2.4$ region. The \acp{RPC}, covering the same
+regions as both the \acp{DT} and \acp{CSC}, are used as a dedicated triggering system.
 
 A cross section of one quadrant of the detector, indicating
-the positions of the \ac{DTs}, \ac{CSCs} and \ac{RPCs}, is shown in figure \ref{fig:CMS_MuonSystem}.
+the positions of the \acp{DT}, \acp{CSC} and \acp{RPC}, is shown in figure \ref{fig:CMS_MuonSystem}.
 The top of the fourth muon endcap station as shown in this figure was added during \ac{LS1} \cite{cms-muon-upgrade}, providing
-additional layers of \ac{CSCs} and \ac{RPCs}.
+additional layers of \acp{CSC} and \acp{RPC}.
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{./Detector/Plots/MuonSystemUpgrade.png}
@@ -412,7 +412,7 @@ part existed.}
 \end{center}
 \end{figure}
 
-The \ac{DTs} consists of layers of drift cells which have a cross section of $4.2\,\cm \times 1.3\,\cm$ and
+The \acp{DT} consist of layers of drift cells which have a cross section of $4.2\,\cm \times 1.3\,\cm$ and
 are $2.4\,\metre$ long. The cells are filled with a mixture of %85\% 
 argon gas and carbon dioxide gas.
 Muons passing through the chamber ionise the gas, freeing electrons
@@ -423,14 +423,14 @@ these layers are oriented parallel to the beam line, providing a measurement of 
 There are also layers oriented orthogonal to the beam line, which give a measurement
 of the $z$ coordinate. Measurements of the spatial resolution were made
 during p-p running in 2010.
-The spatial resolution of the \ac{DTs} is $80$--$120\,\micron$ per chamber for
+The spatial resolution of the \acp{DT} is $80$--$120\,\micron$ per chamber for
 measurements in the $\phi$ direction, while the resolution of the $z$ measurement
 is $130$--$400\,\micron$ \cite{cms-muon-7tev}. %Drift lines distorted by magnetic field parallel to the wires
 
-In the endcaps, where both the muon rate and the radiation levels are higher, the \ac{CSCs} provide
+In the endcaps, where both the muon rate and the radiation levels are higher, the \acp{CSC} provide
 measurements of the muon track. These detectors are radiation hard,
 and have a fast response and fine segmentation.
-Each of the CSC modules is a wedge-shaped
+Each of the \ac{CSC} modules is a wedge-shaped
 multi-wire proportional chamber %WTF
 with six gaseous chambers bounded by cathode plates. Sensitive
 strips are placed on these plates in the 
@@ -439,13 +439,13 @@ Anode wires between the cathode planes
 run along the $\phi$ direction and provide a measurement of
 $\eta$. The resolution of the $r$--$\phi$ measurement is $40$--$120\,\micron$ \cite{cms-muon-7tev}.
 
-In addition to the \ac{DTs} and \ac{CSCs}, the \ac{RPCs} provide coverage
+In addition to the \acp{DT} and \acp{CSC}, the \acp{RPC} provide coverage
 for $|\eta|<1.6$. These are made up of parallel plates, forming the anode and cathode,
 with a gas gap in between. Ionisation of the gas due to the passing
 muons is read out using aluminium strips running parallel to the 
-beam axis. The position resolution of the \ac{RPCs} is poorer than
-that of the \ac{DTs} and \ac{CSCs}, but their time response is very fast. As
-a result of this the \ac{RPCs} are used as an independent muon trigger
+beam axis. The position resolution of the \acp{RPC} is poorer than
+that of the \acp{DT} and \acp{CSC}, but their time response is very fast. As
+a result of this the \acp{RPC} are used as an independent muon trigger
 which can correctly identify the beam crossing from which the muon
 originated.
 
@@ -496,8 +496,8 @@ The trigger employed during Run 1, and the first year of Run 2, did not use time
 information from different regions of the detector was processed independently.
 
 Hits in the muon chambers are read out and passed to the track finder layer 
-of the muon trigger, which combines information from the CSC, DT
-and RPC systems in regions of $\eta$-$\phi$.
+of the muon trigger, which combines information from the \ac{CSC}, \ac{DT}
+and \ac{RPC} systems in regions of $\eta$-$\phi$.
 In further layers of the muon trigger the information from different
 regions is combined, until finally the global muon trigger
 can return a sorted list of the best muon candidates to the global trigger.
