--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -97,7 +97,7 @@ on the electrons and muons is 1 GeV above the \pT~threshold of the trigger. The
 hadronic tau efficiency turns on much more slowly, and therefore the offline \pT~cut
 on the hadronic taus in the \tautau channel is 5 GeV above the trigger \pT~threshold.
 In addition, a requirement is made on the $\eta$ of the electrons, muons and
-hadronic taus. This election is driven by the $\eta$ range covered by the tracker and
+hadronic taus. This selection is driven by the $\eta$ range covered by the tracker and
 that is thus used for the reconstruction of the particles. For some of the
 channels the used trigger is restricted in $\eta$. If that is the case
 then the cut is chosen to align with the trigger restrictions.
@@ -105,7 +105,7 @@ As an illustration figure \ref{fig:mt_muonpt}b shows
 the $\eta$ distribution for electrons in the \etau channel, again with the signal overlaid.
 The signal peaks in the central $\eta$ region.
 
-Other selections include cuts on the impact parameters $d_{xy}$ and $d_{z}$, which
+Other selections include cuts on the transverse and longitudinal impact parameters $d_{xy}$ and $d_{z}$, which
 ensure that the particle is likely to have
 originated from the primary vertex. This reduces the number of selected particles
 which come from pile--up interactions.
@@ -701,8 +701,8 @@ Smaller backgrounds
 from \Zellell decays also play a role, especially in the \mutau and \etau channels where such events
 might pass the selection if for example a jet is misreconstructed as a hadronic tau and only one of the leptons is reconstructed. 
 Production of QCD multijet events, labelled `QCD' on the plots in figure \ref{fig:mssm_bkgs_overview}, is a background when 
-two jets are misreconstructed as the two particles of the candidate pair. %Relatively likely to happen in tautau channel
-As visible in figure \ref{fig:mssm_bkgs_overview}b, the \ttbar background is particularly important in the b-tag category.
+two jets are misreconstructed as the two tau candidates. %Relatively likely to happen in tautau channel
+As is visible in figure \ref{fig:mssm_bkgs_overview}b, the \ttbar background is particularly important in the b-tag category.
 This is because top quarks virtually always decay as $\Ptop\rightarrow \PW\Pbottom$, and so such events nearly 
 always contain real b-jets. The decay products  of one or both of the \PW bosons, and additional jets in the event, can 
 then form \etau, \mutau, \tautau and \emu pairs.\\
@@ -713,7 +713,7 @@ reconstructed as hadronic taus.
 In the \emu channel an additional lepton would have to originate from one of the jets, and so in this
 channel this background is smaller. Backgrounds that are small in all channels are the di-boson and single-top backgrounds. In 
 figures showing the backgrounds the di-boson and single-top backgrounds are drawn together with the \Wjets 
-background as the `Electroweak' component.
+background and is referred to as the `Electroweak' component.
 
 \begin{figure}[h!]
 \begin{center}
