--- a/backmatter.tex
+++ b/backmatter.tex
@@ -38,7 +38,7 @@
 \acro{TOB}[TOB]{Tracker Outer Barrel}
 \acro{TEC}[TEC]{Tracker EndCap}
 \acro{EB}[EB]{ECAL Barrel}
-\acro{EE}[EE]{ECAL Endcaps}
+\acro{EE}[EE]{ECAL Endcap}
 \acro{HB}[HB]{Hadron Barrel Calorimeter}
 \acro{HO}[HO]{Hadron Outer Calorimeter}
 \acro{HE}[HE]{Hadron Endcap Calorimeter}
@@ -46,14 +46,14 @@
 \acro{BSM}[BSM]{Beyond the Standard Model}
 \acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
-\acro{CSCs}[CSCs]{Cathode Strip Chambers}
-\acro{DTs}[DTs]{Drift Tube chambers}
-\acro{RPCs}[RPCs]{Resistive Plate Chambers}
+\acro{CSC}[CSC]{Cathode Strip Chamber}
+\acro{DT}[DT]{Drift Tube chamber}
+\acro{RPC}[RPC]{Resistive Plate Chamber}
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \acro{RF}[RF]{radio frequency}
 \acro{PF}[PF]{Particle Flow}
-\acro{BDTs}[BDTs]{Boosted Decision Trees}
+\acro{BDT}[BDT]{Boosted Decision Tree}
 \acro{KF}[KF]{Kalman Filter}
 \acro{CTF}[CTF]{Combinatorial Track Finder}
 \acro{GSF}[GSF]{Gaussian Sum Filter}
