--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -2,26 +2,71 @@
 \titlepage[Imperial College London\\ Department of Physics]{
   A dissertation submitted to Imperial College London\\ for the degree of Doctor of Philosophy}
 
-%\begin{abstract}[]
-%The copyright of this thesis rests with the author and is made available under a
-%Creative Commons Attribution Non-Commercial No Derivatives licence. Researchers
-%are free to copy, distribute or transmit the thesis on the condition that they
-%attribute it, that they do not use it for commercial purposes and that they do
-%not alter, transform or build upon it. For any reuse or redistribution,
-%researchers must make clear to others the licence terms of this work.
-%\end{abstract}
-%% Abstract
-%\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
-%  %\thispagestyle{empty}
-%\end{abstract}
+\begin{abstract}[]
+The copyright of this thesis rests with the author and is made available under a
+Creative Commons Attribution Non-Commercial No Derivatives licence. Researchers
+are free to copy, distribute or transmit the thesis on the condition that they
+attribute it, that they do not use it for commercial purposes and that they do
+not alter, transform or build upon it. For any reuse or redistribution,
+researchers must make clear to others the licence terms of this work.
+\end{abstract}
+
+% Abstract
+\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
+  %\thispagestyle{empty}
+The \ac{CMS} detector is a general-purpose detector located at the Large Hadron
+Collider at CERN. It was designed to test the predictions of the standard model 
+and to search for the Higgs boson in addition to searches for new physics beyond
+the standard model.
+The analyses presented in this thesis are searches for neutral
+Higgs bosons with tau leptons in the final state, and use proton-proton collision data recorded
+by \acs{CMS} during 2012, 2015 and 2016. The searches are performed in the
+context of the \ac{MSSM}. One of the analyses, using $19.7\,\invfb$ collected
+during 2012 at $\sqrt{s}=8\,\TeV$, is a search for a heavy neutral Higgs boson
+decaying into two $125\,\GeV$ \ac{MSSM} Higgs bosons with \ac{SM}-like properties,
+with two b-quarks and two tau leptons in the final state. The other analyses use 
+$2.3\,\invfb$ collected during 2015 and $12.9\,\invfb$ collected during 2016, both
+at $\sqrt{s}=13\,\TeV$. These are searches for neutral \ac{MSSM}
+Higgs bosons in the mass range of $90\,\GeV$--$3.2\,\TeV$ directly decaying
+into pairs of tau leptons. 
+No significant excess is observed in any of the searches. Upper limits at 95\% confidence 
+level are set on the cross section times branching ratio for the Higgs production process
+in consideration. In addition, limits are set in the \mA-\tanb~parameter space of 
+several \ac{MSSM} benchmark scenarios, and in the \cosba-\tanb~parameter space of an example
+of a two Higgs doublet model.
+
+\end{abstract}
 
 
-%% Declaration
-%\begin{declaration}
-%  \vspace*{1cm}
-%  \begin{flushright}
-%  \end{flushright}
-%\end{declaration}
+% Declaration
+\begin{declaration}
+  \vspace*{1cm}
+  I declare that the work in this thesis is mine. Figures and results taken from other sources
+include the appropriate reference in the text or figure caption. Figures labelled `CMS' are sourced
+directly from CMS publications. The `CMS Preliminary' label indicates figures which
+have been made public via a preliminary public document or a public website, but are not
+included in a publication in a peer-reviewed journal. Figures labelled `CMS' or `CMS preliminary', 
+including those made by myself, include the relevant reference in the figure caption.
+The work for the analyses presented in chapters \ref{chap:hhh} and \ref{chap:mssm} was 
+carried out as part of the CMS \Htotautau working group, and in collaboration with other members of the group.
+For the results presented in chapter \ref{chap:hhh} I 
+was responsible for the statistical inference. This included
+the interpretation of the results in MSSM and two Higgs doublet model benchmark scenarios. The 
+work is included in Ref. \cite{CMS-HIG-14-034}. For the results presented in chapter \ref{chap:mssm}
+I was responsible for all stages of the analysis, including the optimisation
+of object selection and event categorisation, as well as studies of background
+methods for three out of four channels presented in the final version of the analysis,
+evaluation of systematic uncertainties in all four channels, and production of the statistical
+results, including model interpretations. This work is included in the most recent
+preliminary result \cite{CMS-PAS-HIG-16-037}, as well as a predating preliminary
+result using a smaller dataset \cite{CMS-PAS-HIG-16-006}.
+The work presented in chapter \ref{sec:mssm_combination} has
+not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and \cite{CMS-PAS-HIG-16-006}.
+
+  \begin{flushright}
+  Adinda de Wit
+  \end{flushright}
+\end{declaration}
 
 
 %% Acknowledgements
