--- a/preamble.tex
+++ b/preamble.tex
@@ -58,6 +58,7 @@
 \DeclareRobustCommand{\Htohh}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight}\xspace}
 \DeclareRobustCommand{\Htohhtobbtautau}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\htotautau}{\HepProcess{ \PHiggslight \to \Pgt \Pgt}\xspace}
+\DeclareRobustCommand{\Htotautau}{\HepProcess{ \PHiggs \to \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\hhtobbtautau}{\HepProcess{ \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\AHtotautau}{\HepProcess{ \PHiggsps / \PHiggs \to \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\AtoZh}{\HepProcess{ \PHiggsps \to \PZ \PHiggslight}\xspace}
@@ -66,9 +67,9 @@
 \DeclareRobustCommand{\emu}{\HepProcess{\Pe\Pmu}\xspace}
 \DeclareRobustCommand{\ee}{\HepProcess{\Pe\Pe}\xspace}
 \DeclareRobustCommand{\mumu}{\HepProcess{\Pmu\Pmu}\xspace}
-\newcommand{\mutau}{$\Pgm\Pgt_{h}$\xspace}
-\newcommand{\etau}{$\Pe\Pgt_{h}$\xspace}
-\newcommand{\tautau}{$\Pgt_{h}\Pgt_{h}$\xspace}
+\newcommand{\mutau}{$\Pgm$\Pgth}
+\newcommand{\etau}{$\Pe$\Pgth}
+\newcommand{\tautau}{$\Pgth\Pgth$\xspace}
 \DeclareRobustCommand{\mumu}{\HepProcess{\Pmu\Pmu} \xspace}
 \DeclareRobustCommand{\Zellell}{\HepProcess{ \PZ/\Pphotonx \to \Plepton \Plepton}\xspace}
 \DeclareRobustCommand{\Zll}{\HepProcess{ \PZ/\Pphotonx \to ll}\xspace}
